--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -613,7 +613,7 @@ a:hover {
 .title {
     font-size: 2.5rem;
     font-weight: bold;
-    color: #28a745;
+    color: #ffffff;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
     margin-bottom: 10px;
 }
