--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -656,7 +656,7 @@ a:hover {
 /* Botón de registro */
 .btn-register {
     background-color: #007bff;
-    color: white;
+    color: 007bff;
 }
 
 .btn-register:hover {
