--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,7 +6,7 @@
     font-family: 'Arial', sans-serif;
 }
 body {
-    background: linear-gradient(135deg, #2c3e50, #4ca1af); /* Fondo suave y moderno */
+    background: linear-gradient(135deg, #2c3e50, #4ca1af); 
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -17,7 +17,7 @@ body {
 
 /* ======================= CONTENEDOR PRINCIPAL (INDEX) ======================= */
 .container {
-    background: rgba(30, 98, 36, 0.9); /* Fondo blanco con transparencia */
+    background: rgba(30, 98, 36, 0.9); 
     padding: 2rem;
     border-radius: 10px;
     width: 100%;
@@ -26,29 +26,29 @@ body {
     text-align: center;
     display: flex;
     flex-direction: column;
-    align-items: center; /* Centra elementos internos */
+    align-items: center; 
 }
 
 h1, h2, h3 {
     
     margin-bottom: 1.5rem;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Sombra para mayor contraste */
-    text-align: center; /* Asegura el centrado del texto */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); 
+    text-align: center; 
 }
 
 h1 {
-    font-size: 2.8rem; /* Aumenta el tamaño del título principal */
-    color: #e8e1e1; /* Rosa vibrante para destacar */
+    font-size: 2.8rem; 
+    color: #e8e1e1; 
 }
 
 h2 {
-    font-size: 2.2rem; /* Ajusta el tamaño del subtítulo */
-    color: #e8e1e1; /* Verde azulado llamativo */
+    font-size: 2.2rem; 
+    color: #e8e1e1; 
 }
 
 h3 {
-    font-size: 1.8rem; /* Ajusta el tamaño del tercer nivel */
-    color: #fdcb6e; /* Amarillo cálido */
+    font-size: 1.8rem; 
+    color: #fdcb6e; 
 }
 
 button {
@@ -62,23 +62,23 @@ button {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    font-weight: bold; /* Negrita para destacar */
+    font-weight: bold; 
 }
 button:hover {
-    background-color: #218838; /* Oscurece al pasar el mouse */
+    background-color: #218838; 
 }
 button:active {
-    transform: scale(0.98); /* Efecto de clic */
+    transform: scale(0.98); 
 }
 
 p {
     margin-top: 1rem;
-    font-size: 1rem; /* Ajusta el tamaño del párrafo */
-    color: #f8f9fa; /* Blanco casi puro */
+    font-size: 1rem; 
+    color: #f8f9fa;
 }
 
 a {
-    color: #007bff; /* Azul claro */
+    color: #007bff;
     text-decoration: none;
     font-weight: bold;
 }
@@ -645,7 +645,7 @@ a:hover {
 }
 
 .btn-login {
-    background-color: #28a745;
+    background-color: #004FA3;
     color: white; /* Asegura buen contraste */
     font-size: 18px; /* Aumenta el tamaño del texto */
     padding: 10px 20px; /* Mejora la apariencia */
@@ -657,7 +657,7 @@ a:hover {
 
 /* Botón de registro */
 .btn-register {
-    background-color: #007bff;
+    background-color: #004FA3;
     color: white; /* Se corrigió el color para mejor contraste */
     font-size: 18px; /* Aumenta el tamaño del texto */
     padding: 10px 20px; /* Mejora la apariencia */
